# youtube-summarizer

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  test.txt
youtubesummaries/: Config.py  ConfigManager.py  LLMProvider.py  TimestampedSegment.py  VideoMetadata.py  YouTubeSummarizerError.py  YoutubeSummarizer.py  __init__.py  cli.py  config.py  core.py  mcp_server.py
